--- a/Rules
+++ b/Rules
@@ -15,7 +15,7 @@ preprocess do
   File.delete("output/search-index.json") if File.exists?("output/search-index.json")
 end
 
-compile '/static/*' do
+compile '/developer/assets/*' do
 end
 
 compile '/CNAME/' do
@@ -37,8 +37,9 @@ compile '*' do
   layout item[:layout] || 'default'
 end
 
-route '/static/*' do
-  item.identifier[7..-2]
+route '/developer/assets/*' do
+  item.identifier.chop
+  # item.identifier[7..-2]
 end
 
 route '/CNAME/' do
