--- a/Rules
+++ b/Rules
@@ -21,7 +21,7 @@ end
 compile '/CNAME/' do
 end
 
-compile '/v1/*' do
+compile '/developer/v1/*' do
   filter :erb
   filter :kramdown, :toc_levels => [2]
   filter :colorize_syntax,
