--- a/Rules
+++ b/Rules
@@ -21,12 +21,20 @@ end
 compile '/CNAME/' do
 end
 
-compile '/developer/v1/*' do
+compile '/developer/core_v1/*' do
   filter :erb
   filter :kramdown, :toc_levels => [2]
   filter :colorize_syntax,
     :colorizers => {:javascript => :pygmentsrb}
-  layout item[:layout] || 'api'
+  layout item[:layout] || 'core_v1'
+end
+
+compile '/developer/rom_v1/*' do
+  filter :erb
+  filter :kramdown, :toc_levels => [2]
+  filter :colorize_syntax,
+    :colorizers => {:javascript => :pygmentsrb}
+  layout item[:layout] || 'rom_v1'
 end
 
 compile '*' do
